--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,8 @@
 @import "normalize.scss";
 @import "fonts.scss";
+@import "variables.scss";
+@import "mixins.scss";
+@import "blocks/page-container.scss";
 @import "blocks/page-header.scss";
 @import "blocks/page-content.scss";
 @import "blocks/sidebar.scss";
