подобрал шрифты (почти)

--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,3 +1,7 @@
 * {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: 'Open Sans', arial;
+  // font-family: 'PT Serif', serif;
+}
+h1, h2, h3 {
+  font-family: 'Lucida Sans Unicode', arial;
 }
