--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -3,5 +3,6 @@
   // font-family: 'PT Serif', serif;
 }
 h1, h2, h3 {
-  font-family: 'Lucida Sans Unicode', arial;
+  // font-family: 'Lucida Sans Unicode', arial;
+  font-family: 'Open Sans', arial;
 }
