--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,8 +1,10 @@
 * {
   font-family: 'Open Sans', arial;
-  // font-family: 'PT Serif', serif;
+
 }
 h1, h2, h3 {
-  // font-family: 'Lucida Sans Unicode', arial;
+  font-family: 'Open Sans', arial;
+}
+button {
   font-family: 'Open Sans', arial;
 }
