--- a/sass/blocks/page-content.scss
+++ b/sass/blocks/page-content.scss
@@ -1,6 +1,7 @@
 .page-content {
   box-sizing: border-box;
-  margin-right: 264px;
+  width: 420px;
+  float: left;
 }
 
 .page-content__article {
@@ -13,6 +14,10 @@
     margin-bottom: 13px;
     padding-bottom: 0;
   }
+}
+
+.page-content__main-block {
+  position: relative;
 }
 
 .page-content__header {
@@ -28,6 +33,10 @@
   vertical-align: top;
 
   &--main {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
     width: 100%;
     margin: 0;
     padding: 3px 10px;
@@ -54,7 +63,7 @@
   &--main {
     width: 100%;
     height: auto;
-    margin-bottom: -60px;
+    // margin-bottom: -60px;
   }
 }
 
@@ -73,7 +82,7 @@
 .page-content__text {
   margin: 0;
   padding-left: 2px;
-  padding-top: 4px;
+  padding-top: 8px;
 
   font-size: 14px;
   line-height: 15px;
@@ -91,4 +100,13 @@
 
     background-color: rgba(64, 69, 75, 1);
   }
+}
+
+@media (max-width: 695px) {
+
+  .page-content {
+    float: none;
+    width: 320px;
+  }
+
 }
