--- a/sass/blocks/sidebar.scss
+++ b/sass/blocks/sidebar.scss
@@ -3,10 +3,10 @@
 
   float: right;
   box-sizing: border-box;
-  width: 264px;
+  width: 260px;
   height: 718px;
   padding-left: 10px;
-  padding-right: 16px;
+  padding-right: 12px;
 
   overflow: hidden;
 
@@ -96,21 +96,23 @@
   background-color: white;
   border: 1px solid #cacaca;
   border-radius: 2px;
-  box-shadow: inset 0px -25px 60px -40px rgba(black, 0.8);
+  box-shadow: inset 0px -50px 60px -60px rgba(0, 0 ,0 , 0.4);
 }
 
 .sidebar__news-button {
   min-width: 196px;
   height: 30px;
+  margin-left: 5px;
   padding-left: 20px;
   padding-right: 20px;
 
   font-size: 15px;
-
+  letter-spacing: -0.3px;
   vertical-align: bottom;
+  color: black;
 
   background-color: white;
   border: 1px solid #cacaca;
   border-radius: 2px;
-  box-shadow: inset 0px -25px 60px -40px rgba(black, 0.8);
+  box-shadow: inset 0px -50px 60px -60px rgba(0, 0 ,0 , 0.4);
 }
