--- a/sass/blocks/sidebar.scss
+++ b/sass/blocks/sidebar.scss
@@ -116,3 +116,22 @@
   border-radius: 2px;
   box-shadow: inset 0px -50px 60px -60px rgba(0, 0 ,0 , 0.4);
 }
+
+@media (max-width: 695px) {
+
+  .sidebar {
+    width: 100%;
+    padding: 0;
+    height: auto;
+  }
+
+  .sidebar__navigation {
+    position: static;
+    box-shadow: none;
+    padding: 10px 0;
+    margin: 0 auto;
+
+    text-align: center;
+  }
+
+}
