--- a/sass/blocks/sidebar.scss
+++ b/sass/blocks/sidebar.scss
@@ -4,13 +4,16 @@
   float: right;
   box-sizing: border-box;
   width: 260px;
-  height: 718px;
-  padding-left: 10px;
   padding-right: 12px;
-
-  overflow: hidden;
+  padding-left: 10px;
 
   @include clearfix;
+
+  &--limited-height {
+    height: 718px;
+    overflow: hidden;
+  }
+
 }
 
 .sidebar__item {
@@ -19,6 +22,9 @@
   &:first-of-type .sidebar__time {
     font-weight: bold;
     color: black;
+  }
+  &--hidden {
+    display: none;
   }
 }
 .sidebar__header {
@@ -77,14 +83,23 @@
 
 .sidebar__navigation {
   position: absolute;
-  bottom: 0;
-  z-index: 666;
+  bottom: -70px;
+  z-index: -1;
 
   margin-left: 3px;
   padding-top: 20px;
+  padding-bottom: 20px;
 
   background-color: white;
-  box-shadow: 0 -10px 10px -2px white;
+
+  &--opened {
+    bottom: 0;
+    z-index: 666;
+
+    padding-bottom: 0;
+
+    box-shadow: 0 -10px 10px -2px white;
+  }
 }
 
 .sidebar__up-button {
@@ -123,6 +138,17 @@
     width: 100%;
     padding: 0;
     height: auto;
+
+    &--limited-height {
+      height: auto;
+    }
+  }
+
+  .sidebar__item {
+
+    &--hidden {
+      display: none;
+    }
   }
 
   .sidebar__navigation {
