добавил ссылки в заголовки статей

--- a/sass/blocks/page-content.scss
+++ b/sass/blocks/page-content.scss
@@ -32,6 +32,10 @@
   line-height: 21px;
   vertical-align: top;
 
+  a:link, a:visited {
+    text-decoration: none;
+    color: inherit;
+  }
   &--main {
     position: absolute;
     bottom: 0;
