--- a/sass/blocks/comment-counter.scss
+++ b/sass/blocks/comment-counter.scss
@@ -4,13 +4,15 @@
 
   display: inline-block;
   margin-left: 8px;
-  padding-top: 2px;
+  padding-top: 1px;
   padding-right: 4px;
   padding-bottom: 1px;
-  padding-left: 5px;
+  padding-left: 4px;
 
   font-size: 9px;
   line-height: 10px;
+  font-weight: bold;
+  letter-spacing: -0.2px;
   color: white;
 
   background-color: #ff3234;
